# xcbuild-rust

./: BUILD.bazel  Cargo.toml  MODULE.bazel  README.md
.github/workflows/: build.yml  release.yml
crates/xcbuild-acdriver/: BUILD.bazel  Cargo.toml
crates/xcbuild-acdriver/src/: lib.rs
crates/xcbuild-bom/: BUILD.bazel  Cargo.toml
crates/xcbuild-bom/src/: lib.rs
crates/xcbuild-builtin/: BUILD.bazel  Cargo.toml
crates/xcbuild-builtin/src/: copy.rs  copy_plist.rs  copy_strings.rs  copy_tiff.rs  embedded_binary_validation_utility.rs  info_plist_utility.rs  lib.rs  ls_register_url.rs  product_packaging_utility.rs  validation_utility.rs
crates/xcbuild-car/: BUILD.bazel  Cargo.toml
crates/xcbuild-car/src/: lib.rs
crates/xcbuild-dependency/: BUILD.bazel  Cargo.toml
crates/xcbuild-dependency/src/: lib.rs
crates/xcbuild-hmap/: BUILD.bazel  Cargo.toml
crates/xcbuild-hmap/src/: lib.rs
crates/xcbuild-pbxproj/: BUILD.bazel  Cargo.toml
crates/xcbuild-pbxproj/src/: lib.rs
crates/xcbuild-pbxsetting/: BUILD.bazel  Cargo.toml
crates/xcbuild-pbxsetting/src/: lib.rs
crates/xcbuild-pbxspec/: BUILD.bazel  Cargo.toml
crates/xcbuild-pbxspec/src/: lib.rs
crates/xcbuild-plist/: BUILD.bazel  Cargo.toml
crates/xcbuild-plist/src/: ascii.rs  lib.rs
crates/xcbuild-sdk/: BUILD.bazel  Cargo.toml
crates/xcbuild-sdk/src/: lib.rs
crates/xcbuild-xcassets/: BUILD.bazel  Cargo.toml
crates/xcbuild-xcassets/src/: lib.rs
crates/xcbuild-xcscheme/: BUILD.bazel  Cargo.toml
crates/xcbuild-xcscheme/src/: lib.rs
crates/xcbuild-xcworkspace/: BUILD.bazel  Cargo.toml
crates/xcbuild-xcworkspace/src/: lib.rs
tools/PlistBuddy/: BUILD.bazel  Cargo.toml
tools/PlistBuddy/src/: main.rs
tools/actool/: BUILD.bazel  Cargo.toml
tools/actool/src/: main.rs
tools/builtin-copy/: BUILD.bazel  Cargo.toml
tools/builtin-copy-plist/: BUILD.bazel
tools/builtin-copy-plist/src/: main.rs
tools/builtin-copy/src/: main.rs
tools/builtin-copyPlist/: Cargo.toml
tools/builtin-copyStrings/: BUILD.bazel  Cargo.toml
tools/builtin-copyStrings/src/: main.rs
tools/builtin-copyTiff/: BUILD.bazel  Cargo.toml
tools/builtin-copyTiff/src/: main.rs
tools/builtin-embedded-binary-validation-utility/: Cargo.toml
tools/builtin-embedded-binary-validation-utility/src/: main.rs
tools/builtin-embeddedBinaryValidationUtility/: BUILD.bazel
tools/builtin-info-plist-utility/: BUILD.bazel  Cargo.toml
tools/builtin-info-plist-utility/src/: main.rs
tools/builtin-ls-register-url/: BUILD.bazel  Cargo.toml
tools/builtin-lsRegisterURL/src/: main.rs
tools/builtin-productPackagingUtility/: BUILD.bazel  Cargo.toml
tools/builtin-productPackagingUtility/src/: main.rs
tools/builtin-validation-utility/: BUILD.bazel
tools/builtin-validation-utility/src/: main.rs
tools/builtin-validationUtility/: Cargo.toml
tools/dependency-info-tool/: BUILD.bazel  Cargo.toml
tools/dependency-info-tool/src/: main.rs
tools/dump-bom/: BUILD.bazel  Cargo.toml
tools/dump-bom/src/: main.rs
tools/dump-car/: BUILD.bazel  Cargo.toml
tools/dump-car/src/: main.rs
tools/dump-dependency/: BUILD.bazel  Cargo.toml
tools/dump-dependency/src/: main.rs
tools/dump-hmap/: BUILD.bazel  Cargo.toml
tools/dump-hmap/src/: main.rs
tools/dump-xcassets/: BUILD.bazel  Cargo.toml
tools/dump-xcassets/src/: main.rs
tools/dump-xcconfig/: BUILD.bazel  Cargo.toml
tools/dump-xcconfig/src/: main.rs
tools/dump-xcodeproj/: BUILD.bazel  Cargo.toml
tools/dump-xcodeproj/src/: main.rs
tools/dump-xcspec/: BUILD.bazel  Cargo.toml
tools/dump-xcspec/src/: main.rs
tools/dump-xcworkspace/: BUILD.bazel  Cargo.toml
tools/dump-xcworkspace/src/: main.rs
tools/lsbom/: BUILD.bazel  Cargo.toml
tools/lsbom/src/: main.rs
tools/mkbom/: BUILD.bazel  Cargo.toml
tools/mkbom/src/: main.rs
tools/plist-buddy/src/: main.rs
tools/plutil/: BUILD.bazel  Cargo.toml
tools/plutil/src/: main.rs
tools/sw_vers/: BUILD.bazel  Cargo.toml
tools/sw_vers/src/: main.rs
tools/xcode-select/: BUILD.bazel  Cargo.toml
tools/xcode-select/src/: main.rs
tools/xcrun/: BUILD.bazel  Cargo.toml
tools/xcrun/src/: main.rs
