load("@rules_pkg//:pkg.bzl", "pkg_tar")

exports_files([
    "Cargo.toml",
    "Cargo.lock",
])

pkg_tar(
    name = "xcbuild",
    srcs = [
        "//tools/actool",
        "//tools/builtin-copy",
        "//tools/builtin-copyPlist",
        "//tools/builtin-copyStrings",
        "//tools/builtin-copyTiff",
        "//tools/builtin-embeddedBinaryValidationUtility",
        "//tools/builtin-infoPlistUtility",
        "//tools/builtin-lsRegisterURL",
        "//tools/builtin-productPackagingUtility",
        "//tools/builtin-validationUtility",
        "//tools/dependency-info-tool",
        "//tools/dump-bom:dump_bom",
        "//tools/dump-car:dump_car",
        "//tools/dump-dependency:dump_dependency",
        "//tools/dump-hmap:dump_hmap",
        "//tools/dump-xcassets:dump_xcassets",
        "//tools/dump-xcconfig:dump_xcconfig",
        "//tools/dump-xcodeproj:dump_xcodeproj",
        "//tools/dump-xcspec:dump_xcspec",
        "//tools/dump-xcworkspace:dump_xcworkspace",
        "//tools/lsbom",
        "//tools/mkbom",
        "//tools/plist-buddy:PlistBuddy",
        "//tools/plutil",
        "//tools/xcode-select",
        "//tools/xcrun",
    ],
    extension = "tar.xz",
)
