[workspace]
resolver = "2"
members = [
    "crates/xcbuild-hmap",
    "crates/xcbuild-dependency",
    "crates/xcbuild-bom",
    "crates/xcbuild-plist",
    "crates/xcbuild-car",
    "crates/xcbuild-sdk",
    "crates/xcbuild-pbxsetting",
    "crates/xcbuild-pbxproj",
    "crates/xcbuild-xcworkspace",
    "crates/xcbuild-xcscheme",
    "crates/xcbuild-xcassets",
    "crates/xcbuild-pbxspec",
    "crates/xcbuild-builtin",
    "crates/xcbuild-acdriver",
    "tools/xcrun",
    "tools/xcode-select",
    "tools/plutil",
    "tools/PlistBuddy",
    "tools/lsbom",
    "tools/mkbom",
    "tools/actool",
    "tools/dump-hmap",
    "tools/dump-bom",
    "tools/dump-car",
    "tools/dump-xcodeproj",
    "tools/dump-xcconfig",
    "tools/dump-xcspec",
    "tools/dump-xcworkspace",
    "tools/dump-xcassets",
    "tools/dump-dependency",
    "tools/dependency-info-tool",
    "tools/builtin-copy",
    "tools/builtin-copyPlist",
    "tools/builtin-copyStrings",
    "tools/builtin-copyTiff",
    "tools/builtin-infoPlistUtility",
    "tools/builtin-lsRegisterURL",
    "tools/builtin-productPackagingUtility",
    "tools/builtin-validationUtility",
    "tools/builtin-embeddedBinaryValidationUtility",
    "tools/sw_vers",
]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
plist = "1"
quick-xml = "0.37"
byteorder = "1"
flate2 = "1"
png = "0.17"
rustyline = "15"
walkdir = "2"
