load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "xcbuild-builtin",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
    deps = [
        "//crates/xcbuild-plist",
        "@crates//:anyhow",
        "@crates//:plist",
        "@crates//:thiserror",
        "@crates//:walkdir",
    ],
)

rust_test(
    name = "test",
    crate = ":xcbuild-builtin",
)
