load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "xcbuild-xcassets",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:anyhow",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:thiserror",
    ],
)

rust_test(
    name = "test",
    crate = ":xcbuild-xcassets",
)
