load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "xcbuild-xcscheme",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:anyhow",
        "@crates//:quick-xml",
        "@crates//:thiserror",
    ],
)

rust_test(
    name = "test",
    crate = ":xcbuild-xcscheme",
)
