load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "PlistBuddy",
    srcs = ["src/main.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//crates/xcbuild-plist",
        "@crates//:anyhow",
        "@crates//:plist",
        "@crates//:rustyline",
    ],
)
