load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "xcrun",
    srcs = ["src/main.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//crates/xcbuild-pbxsetting",
        "//crates/xcbuild-sdk",
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:nix",
    ],
)
